--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -14,6 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/collaboration">
+                <span class="oi oi-globe" aria-hidden="true"></span> Colaboración
+            </NavLink>
+        </div>
         <AuthorizeView Roles="Planner">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/countries">
