--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
@@ -12,28 +12,28 @@
 }
 else
 {
-<MudDataGrid T="CollaborativeDemandDTO" MultiSelection="true" Items="@CollaborativeDemands" SortMode="SortMode.Multiple" Filterable="true"
+    <MudDataGrid T="CollaborativeDemandDTO" MultiSelection="true" Items="@CollaborativeDemands" SortMode="SortMode.Multiple" Filterable="true"
                  ReadOnly="@_isReadOnly" EditMode="@DataGridEditMode.Cell" Hideable="true">
-    <ToolBarContent>
-        <MudText Typo="Typo.h6">Periodic Elements</MudText>
-        <MudSpacer />
-        <MudTextField  Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
-                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-    </ToolBarContent>
-    <Columns>
-        <HierarchyColumn T="CollaborativeDemandDTO" />
-        <SelectColumn T="CollaborativeDemandDTO" />
-        <PropertyColumn Property="x => x.CollaborativeDemandId" />
-        <PropertyColumn Property="x => x.CustomerCode" Title="Codigo Cliente" Sortable="false" Filterable="false" />
-        <PropertyColumn Property="x => x.CustomerName" />
-        <PropertyColumn Property="x => x.CityName" />
-        <PropertyColumn Property="x => x.DistributionChannel" />
-        <PropertyColumn Property="x => x.ShippingPointName" />
-        <PropertyColumn Property="x => x.ProductCode" />
-        <PropertyColumn Property="x => x.ProductName" />
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Periodic Elements</MudText>
+            <MudSpacer />
+            <MudTextField Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        </ToolBarContent>
+        <Columns>
+            <HierarchyColumn T="CollaborativeDemandDTO" />
+            <SelectColumn T="CollaborativeDemandDTO" />
+            <PropertyColumn Property="x => x.CollaborativeDemandId" />
+            <PropertyColumn Property="x => x.CustomerCode" Title="Codigo Cliente" Sortable="false" Filterable="false" />
+            <PropertyColumn Property="x => x.CustomerName" />
+            <PropertyColumn Property="x => x.CityName" />
+            <PropertyColumn Property="x => x.DistributionChannel" />
+            <PropertyColumn Property="x => x.ShippingPointName" />
+            <PropertyColumn Property="x => x.ProductCode" />
+            <PropertyColumn Property="x => x.ProductName" />
 
             @*<PropertyColumn Property="x => x.CollaborativeDemandComponentsDetails" />*@
-    </Columns>
+        </Columns>
         <ChildRowContent>
             <MudCard>
                 <MudCardHeader>
@@ -43,41 +43,41 @@ else
                 </MudCardHeader>
                 <MudCardContent>
                     <MudText>This element is number @context.Item.CustomerName</MudText>
-                    
+
                 </MudCardContent>
             </MudCard>
         </ChildRowContent>
-    <PagerContent>
-        <MudDataGridPager T="CollaborativeDemandDTO" />
-    </PagerContent>
-</MudDataGrid>
+        <PagerContent>
+            <MudDataGridPager T="CollaborativeDemandDTO" />
+        </PagerContent>
+    </MudDataGrid>
 
-<div class="d-flex flex-wrap mt-4">
+    <div class="d-flex flex-wrap mt-4">
         <MudSwitch T="bool" @bind-Checked="@_isReadOnly" Color="Color.Primary">Sort Name Column By Length</MudSwitch>
-</div>
+    </div>
 
-<MudExpansionPanels Style="flex:1">
-    <MudExpansionPanel Text="Show Events">
-        @foreach (var message in _events)
-        {
-            <MudText Typo="@Typo.body2">@message</MudText>
-        }
-        @if (_events.Count > 0)
-        {
-            <div class="d-flex">
-                <MudSpacer />
-                <MudButton  Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
-            </div>
-        }
-    </MudExpansionPanel>
-</MudExpansionPanels>
-    
+    <MudExpansionPanels Style="flex:1">
+        <MudExpansionPanel Text="Show Events">
+            @foreach (var message in _events)
+            {
+                <MudText Typo="@Typo.body2">@message</MudText>
+            }
+            @if (_events.Count > 0)
+            {
+                <div class="d-flex">
+                    <MudSpacer />
+                    <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
+                </div>
+            }
+        </MudExpansionPanel>
+    </MudExpansionPanels>
+
 }
 
 
 
 @code {
-  
+
     private int currentPage = 1;
     private int totalPages;
     private string? _searchString;
@@ -86,6 +86,8 @@ else
     private List<string> _events = new();
 
     public List<CollaborativeDemandDTO>? CollaborativeDemands { get; set; }
+
+    public List<CollaborativeDemandComponentsDetail>? CollaborativeDemandComponentsDetail { get; set; }
 
     [Parameter]
     [SupplyParameterFromQuery]
@@ -127,6 +129,9 @@ else
             return false;
         }
         CollaborativeDemands = response.Response;
+
+        //LoadComponentDetailsAsync();
+
         return true;
     }
 
@@ -184,5 +189,25 @@ else
     //         return (item) => item.Field;
     //     }
     // }
+
+    /*ejemplo chatgpt*/
+    private List<object> items = new List<object>
+    {
+        new { Number = 1, Name = "Alice" },
+        new { Number = 2, Name = "Bob" },
+        // Agrega más objetos anónimos según tus necesidades
+    };
+
+    private List<string> columns = new List<string> { "Number", "Name" };
+
+    // Agregar o eliminar columnas según tus necesidades
+    private void ToggleColumnVisibility(string columnName)
+    {
+        if (columns.Contains(columnName))
+            columns.Remove(columnName);
+        else
+            columns.Add(columnName);
+    }
+
 }
 
