--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/GridTest.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/GridTest.razor
@@ -1,8 +1,10 @@
-﻿@page "/collaboration"
+﻿ @* @page "/collaborationTest"  *@
 @inject IRepository repository
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
 @using System.Collections.Generic
+@using System.Linq.Expressions;
+@using System.Reflection;
 
 @attribute [Authorize(Roles = "Planner,Collaborator")]
 
@@ -33,50 +35,13 @@ else
             <PropertyColumn Property="x => x.ProductName" />
             <TemplateColumn CellClass="d-flex justify-end">
                 <CellTemplate>
-                    <MudStack Row>
-                     <a href=" CollaborativeDemand/CollaborativeDemandEdit/@context.Item.CollaborativeDemandId">Colaborar</a>
+                    <MudStack Row>                     
+                     <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary">Hire</MudButton>
                  </MudStack>
              </CellTemplate>
          </TemplateColumn>
         </Columns>
-        <ChildRowContent>
-            <MudCard>
-                <MudCardHeader>
-                    <CardHeaderContent>
-                        <MudText Typo="Typo.h6">@context.Item.Product</MudText>
-                    </CardHeaderContent>
-                </MudCardHeader>
-                <MudCardContent>
-                    <MudText>This element is number @context.Item.CustomerName</MudText>
-
-                </MudCardContent>
-            </MudCard>
-        </ChildRowContent>
-        <PagerContent>
-            <MudDataGridPager T="CollaborativeDemandDTO" />
-        </PagerContent>
     </MudDataGrid>
-
-    <div class="d-flex flex-wrap mt-4">
-        <MudSwitch T="bool" @bind-Checked="@_isReadOnly" Color="Color.Primary">Sort Name Column By Length</MudSwitch>
-    </div>
-
-    <MudExpansionPanels Style="flex:1">
-        <MudExpansionPanel Text="Show Events">
-            @foreach (var message in _events)
-            {
-                <MudText Typo="@Typo.body2">@message</MudText>
-            }
-            @if (_events.Count > 0)
-            {
-                <div class="d-flex">
-                    <MudSpacer />
-                    <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
-                </div>
-            }
-        </MudExpansionPanel>
-    </MudExpansionPanels>
-
 }
 
 @code {
@@ -90,7 +55,7 @@ else
 
     public List<CollaborativeDemandDTO>? CollaborativeDemands { get; set; }
 
-    public List<CollaborativeDemandComponentsDetail>? CollaborativeDemandComponentsDetailsDTO { get; set; }
+    public List<CollaborativeDemandComponentDTO>? CollaborativeDemandComponentsDetailsDTO { get; set; }
 
     [Parameter]
     [SupplyParameterFromQuery]
@@ -99,6 +64,20 @@ else
     protected async override Task OnInitializedAsync()
     {
         await LoadAsync();
+    }
+    private Expression<Func<CollaborativeDemandComponentDTO, string>> GetStringPropertyLambdaExpression(System.Reflection.PropertyInfo propertyInfo)
+    {
+        // Define a parameter for the lambda expression
+        ParameterExpression param = Expression.Parameter(typeof(CollaborativeDemandComponentDTO), "x");
+
+        // Create an expression to access the property
+        Expression propertyAccess = Expression.Property(param, propertyInfo);
+
+
+        // Create a lambda expression that takes an AType parameter and returns its Name property
+        Expression<Func<CollaborativeDemandComponentDTO, string>> lambdaExpression = Expression.Lambda<Func<CollaborativeDemandComponentDTO, string>>(propertyAccess, param);
+
+        return lambdaExpression;
     }
 
     private async Task SelectedPageAsync(int page)
@@ -133,9 +112,68 @@ else
         }
         CollaborativeDemands = response.Response;
 
-        //LoadComponentDetailsAsync();
+        LoadComponentDetailsAsync();
 
         return true;
+    }
+    private void LoadComponentDetailsAsync()
+    {
+        try
+        {
+            CollaborativeDemandComponentsDetailsDTO  = new List<CollaborativeDemandComponentDTO>();
+
+            foreach (var collaborativeDemand in CollaborativeDemands)
+            {
+                foreach (var componentDetail in collaborativeDemand.CollaborativeDemandComponentsDetails)
+                {
+                    var componentDTO = new CollaborativeDemandComponentDTO
+                        {
+                            CollaborativeDemandId = componentDetail.CollaborativeDemandId,
+                            YearMonth = componentDetail.YearMonth,
+                            Quantity = componentDetail.Quantity,
+                            UserEmail = componentDetail.User.Email,
+                            UserId = componentDetail.User.Id
+
+                        };
+
+                    CollaborativeDemandComponentsDetailsDTO.Add(componentDTO);
+                }
+            }
+
+            // typoOflist();
+
+        }
+        catch (Exception ex)
+        {
+            throw new Exception(ex.Message);
+        }
+
+    }
+
+    private void typoOflist()
+    {
+        foreach (var obj in CollaborativeDemandComponentsDetailsDTO)
+        {
+            Type tipo = obj.GetType();
+
+            Console.WriteLine("Tipo de objeto: " + tipo.Name);
+
+            if (tipo.IsClass)
+            {
+                PropertyInfo[] propiedades = tipo.GetProperties();
+
+                foreach (var propiedad in propiedades)
+                {
+                    Type tipoDePropiedad = propiedad.PropertyType;
+                    string nombreDePropiedad = propiedad.Name;
+
+                    Console.WriteLine($"Propiedad: {nombreDePropiedad}, Tipo: {tipoDePropiedad.Name}");
+                }
+            }
+
+            Console.WriteLine();
+        }
+    
     }
 
     private async Task LoadPagesAsync()
@@ -149,22 +187,14 @@ else
             return;
         }
         totalPages = response.Response;
-    }    
+    }
 
     void RowClicked(DataGridRowClickEventArgs<CollaborativeDemandDTO> args)
     {
         _events.Insert(0, $"Event = RowClick, Index = {args.RowIndex}, Data = {System.Text.Json.JsonSerializer.Serialize(args.Item)}");
     }
 
-    private void ToCollaborate(CollaborativeDemandDTO collaboration)
-    {
-        // Aquí puedes realizar acciones específicas cuando se contrata a un empleado.
-        // Por ejemplo, mostrar una alerta con los datos del empleado.
-        string message = $"Contrataste a {collaboration.CustomerName} .";
-        // Puedes usar la variable 'message' para mostrar una alerta o realizar otras acciones.
-        // Por ejemplo, mostrar una alerta utilizando MudBlazor's MudDialogService.
-        // MudDialogService.ShowMessageBox("Empleado Contratado", message, "Aceptar");
-    }
+
 
 }
 
